welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:6: error: not found: value z
    if (z+b==10+b+c||a+b==10+a+c) {
        ^